// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $2.35
     
  </h1>
</div>
`;

exports[`should correctly render with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $3,332.35
     
  </h1>
</div>
`;
